--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 h1 {
+  margin-top: 100px;
   font-size: 30px;
   text-align: center;
+  font-family: montserrat;
 }
 
 .btn {
@@ -21,12 +23,23 @@ h1 {
 
 .btn-primary {
   background-color: #1fa3ec;
+  margin-top: 20px;
 }
 
 .btn:hover {
   opacity: 0.85;
 }
 
-.search-btn {
+.search-area {
   text-align: center;
+}
+
+#txtBox {
+  margin-top: 20px;
+  width: 50%;
+  padding: 10px;
+}
+
+.results {
+  padding: 50px;
 }
