--- a/style.css
+++ b/style.css
@@ -30,19 +30,25 @@ h1 {
   opacity: 0.85;
 }
 
+main {
+  display: grid;
+  grid-template-columns: 15% 1fr 15%;
+  grid-template-areas: ". main-content .";
+}
+
+.main-content {
+  grid-area: main-content;
+}
+
 .search-area {
   text-align: center;
-  margin-left: 100px;
-  margin-right: 100px;
 }
 
 .result-area {
-  margin-left: 400px;
-  margin-right: 400px;
-  margin-top: 50px;
 }
 
 .result-area h2 {
+  text-align: center;
   font-family: montserrat;
   font-size: 30px;
 }
@@ -54,7 +60,7 @@ h1 {
 }
 
 .results {
-  margin-left: 50px;
+  margin-top: 35px;
 }
 
 .results h3 {
