--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 h1 {
-  margin-top: 100px;
-  font-size: 30px;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  font-size: 40px;
   text-align: center;
   font-family: montserrat;
 }
@@ -32,7 +33,7 @@ h1 {
 
 main {
   display: grid;
-  grid-template-columns: 30% 1fr 30%;
+  grid-template-columns: 25% 1fr 25%;
   grid-template-areas: ". main-content .";
 }
 
